packages/govuk-frontend/src/govuk/components/header/_index.scss
@include govuk-exports("govuk/component/header") {
  $govuk-header-background: govuk-colour("black");
  $govuk-header-text: govuk-colour("white");
  $govuk-header-border-color: $govuk-brand-colour;
  $govuk-header-border-width: govuk-spacing(2);
  $govuk-header-link-underline-thickness: 3px;
  $govuk-header-separator-color:$govuk-border-colour;
  $govuk-header-toolbox-arrow-size: 12px;

  .govuk-header {
    @include govuk-font($size: 19, $line-height: 1);
    border-bottom: $govuk-header-border-width solid $govuk-header-border-color;
    color: $govuk-header-text;
    background-color: $govuk-header-background;
  }

  .govuk-header__container {
    @include govuk-clearfix;
    position: relative;
  }

  .govuk-header__container--full-width {
    padding: 0 govuk-spacing(3);
  }

  .govuk-header__top,
  .govuk-header__bottom {
    padding: govuk-spacing(2) 0;

    @include govuk-media-query($from: tablet) {
      display: flex;
      gap: govuk-spacing(2);
    }
  }

  .govuk-header__top {
    align-items: baseline;
  }

  .govuk-header__bottom {
    border-top: 1px solid $govuk-header-separator-color;
    align-items: center;
  }

  // Links
  .govuk-header__link {
    // Avoid using the `govuk-link-common` mixin because the links in the header
    // get a special treatment, because:
    //
    // - underlines are only visible on hover
    // - all links get a 3px underline regardless of text size, as there are
    //   multiple grouped elements close to one another and having slightly
    //   different underline widths looks unbalanced
    @include govuk-link-style-inverse;

    text-decoration: none;

    &:hover {
      text-decoration: underline;
      text-decoration-thickness: $govuk-header-link-underline-thickness;

      @if $govuk-link-underline-offset {
        text-underline-offset: $govuk-link-underline-offset;
      }
    }

    &:focus {
      @include govuk-focused-text;
    }
  }

  .govuk-header__link--homepage {
    // Font size needs to be set on the link so that the box sizing is correct
    // in Firefox
    display: inline-block;
    font-size: 30px; // We don't have a mixin that produces 30px font size

    &:link,
    &:visited {
      text-decoration: none;
    }

    &:hover,
    &:active {
      // Negate the added border
      margin-bottom: $govuk-header-link-underline-thickness * -1;
      border-bottom: $govuk-header-link-underline-thickness solid;
    }

    // Remove any borders that show when focused and hovered.
    &:focus {
      margin-bottom: 0;
      border-bottom: 0;
    }
  }

  // TEMPORARY HACKY CODE TO POSITION ONE LOGIN ICON
  .govuk-header__one-login-icon {
    margin-top: -1px;
    margin-left: govuk-spacing(1);
    vertical-align: text-bottom;
  }

  // One Login icon focus code
  .govuk-header__link--one-login:focus .govuk-header__one-login-icon {
    .background {
      fill: govuk-colour("black");
    }

    .border {
      stroke: govuk-colour("black");
    }

    .person {
      fill: govuk-colour("white");
    }
  }

  // Logo container
  .govuk-header__logo {
    display: block;

    @include govuk-media-query($from: tablet) {
      display: inline-block;
    }
  }

  // Logo
  .govuk-header__logotype {
    display: inline-block;
    position: relative;
    top: -3px;
    fill: currentcolor;
    vertical-align: top;

    // Prevent readability backplate from obscuring underline in Windows High
    // Contrast Mode
    @media (forced-colors: active) {
      forced-color-adjust: none;
      color: linktext;
    }
  }

  // Product or service name
  .govuk-header__name {
    display: inline-block;
    margin-top: govuk-spacing(1);
    @include govuk-font-size($size: 24);

    @include govuk-media-query($from: tablet) {
      margin-top: 0;
      margin-left: govuk-spacing(2);
      padding-left: govuk-spacing(4);
      border-left: 1px solid $govuk-header-separator-color;
    }
  }

  .govuk-header__name--product {
    @include govuk-typography-weight-bold;
  }

  // Toolboxes
  .govuk-header__toolboxes {
    @include govuk-font-size(16);
    display: flex;
    flex-direction: column;
    margin: 0;
    padding: 0;
    list-style: none;

    @include govuk-media-query($from: mobile) {
      flex-direction: row;
      margin-left: auto;
    }
  }

  .govuk-header__toolboxes-item {
    padding: govuk-spacing(2) 0;
    border-bottom: 1px solid $govuk-header-separator-color;

    @include govuk-media-query($from: mobile) {
      padding: govuk-spacing(1) govuk-spacing(2);
      border-bottom: none;

      // Add separators between toolbox items
      + .govuk-header__toolboxes-item {
        border-left: 1px solid $govuk-header-separator-color;
      }

      // Remove left padding from first toolbox
      &:first-child {
        padding-left: 0;
      }

      // Remove right padding from last toolbox, to ensure alignment with container edge
      &:last-child {
        padding-right: 0;
      }
    }
  }

  .govuk-header__toolbox {
    position: relative;
  }

  .govuk-header__toolbox-summary {
    display: inline-block;
    position: relative;
    padding-right: calc(#{$govuk-header-toolbox-arrow-size} + #{govuk-spacing(2)});

    &::-webkit-details-marker {
      display: none;
    }

    &::after {
      content: "";
      position: absolute;

      top: -1px;
      right: 0;
      bottom: 0;

      margin: auto;

      @include govuk-shape-arrow($direction: down, $base: $govuk-header-toolbox-arrow-size);

      .govuk-header__toolbox[open] > & {
        @include govuk-shape-arrow($direction: up, $base: $govuk-header-toolbox-arrow-size);
      }
    }

    &:focus {
      @include govuk-focused-text;
    }
  }

  .govuk-header__toolbox-contents {
    @include govuk-responsive-padding(2);
    position: absolute;
    top: 100%;
    left: 0;
    width: max-content;
    background-color: $govuk-header-background;

    @include govuk-media-query($from: tablet) {
      right: 0;
      left: auto;
    }

    // HACKY HACKY OVERRIDES
    .govuk-list {
      @include govuk-font-size(16);
      margin-bottom: 0;

      li {
        text-align: start;
      }

      li:last-child {
        margin-bottom: 0;
      }
    }
  }

  // Search
  // This should probably go into its own component, I think?
  .govuk-header__search {
    display: flex;
    margin-bottom: govuk-spacing(2);

    // If the search is the last thing on the row, it doesn't need the bottom margin
    &:last-child {
      margin-bottom: 0;
    }

    @include govuk-media-query($from: tablet) {
      margin-bottom: 0;
    }

    // TEMPORARY HACKY CODE
    label {
      flex-grow: 1;
    }

    // MORE TEMPORARY HACKY CODE
    .govuk-input {
      border-color: govuk-colour("white");
    }

    // EVEN MORE TEMPORARY HACKY CODE
    .govuk-button {
      width: auto;
      margin-bottom: 0;
      box-shadow: none;
    }
  }

  @include govuk-media-query($media-type: print) {
    .govuk-header {
      border-bottom-width: 0;
      color: govuk-colour("black");
      background: transparent;
    }

    .govuk-header__link {
      &:link,
      &:visited {
        color: govuk-colour("black");
      }

      // Do not append link href to GOV.UK link when printing (e.g. '(/)')
      &::after {
        display: none;
      }
    }

    // Hide various elements that aren't useful when printed
    .govuk-header__bottom {
      display: none;
    }
  }
}

